--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-vtk==9.3.0
+vtk==9.2.6
+glob2==0.7
+requests==2.31.0
+itkwidgets==0.32.2
+ipywidgets==7.7.0
+pytest-shutil==1.7.0
 Pillow==9.2.0
 streamlit==1.29.0
 opencv-python-headless==4.9.0.80
